@@ -1,3 +1,9 @@
+1992-02-18  dickey@software.org
+
+	* src/README: *** empty log message ***
+
+	* src/dedring.c, src/ftree.c, src/dedname.c: lint
+
 1992-02-17  dickey@software.org
 
 	* src/version.h:
